--- a/index.html
+++ b/index.html
@@ -1,133 +1,37 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CMD Style UI</title>
-    <style>
-        body {
-            font-family: "Courier New", monospace;
-            background-color: black;
-            color: #00FF00;
-            margin: 0;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            flex-direction: column;
-        }
-        .cmd-box {
-            border: 2px solid #00FF00;
-            padding: 20px;
-            width: 400px;
-            text-align: left;
-            background-color: black;
-        }
-        .cmd-text {
-            font-size: 16px;
-        }
-        .cmd-button {
-            display: block;
-            width: 100%;
-            background: black;
-            color: #00FF00;
-            border: 1px solid #00FF00;
-            font-family: "Courier New", monospace;
-            font-size: 16px;
-            padding: 5px;
-            margin-top: 5px;
-            cursor: pointer;
-            text-align: left;
-        }
-        .cmd-button:hover {
-            background: #00AA00;
-        }
-        .nav-button {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            background: black;
-            border: 1px solid #00FF00;
-            color: #00FF00;
-            font-size: 20px;
-            padding: 5px 10px;
-            cursor: pointer;
-        }
-        .nav-menu {
-            display: none;
-            position: absolute;
-            top: 40px;
-            right: 10px;
-            background: black;
-            border: 1px solid #00FF00;
-            padding: 10px;
-            width: 150px;
-        }
-        .nav-menu a, .nav-menu button {
-            color: #00FF00;
-            text-decoration: none;
-            display: block;
-            margin: 5px 0;
-            background: black;
-            border: 1px solid #00FF00;
-            font-family: "Courier New", monospace;
-            font-size: 16px;
-            padding: 5px;
-            cursor: pointer;
-        }
-        .nav-menu a:hover, .nav-menu button:hover {
-            background: #00AA00;
-        }
-    </style>
-</head>
-<body>
-    <button class="nav-button" onclick="toggleMenu()">☰</button>
-    <div class="nav-menu" id="navMenu">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Settings</a>
-        <button id="disconnectWallet" class="cmd-button" style="display:none;">Disconnect Wallet</button> <!-- Moved here -->
-    </div>
-    <div class="cmd-box">
-        <p class="cmd-text" id="cmdText">C:\Users\Guest> Welcome to the CMD UI</p>
-        <p class="cmd-text">Choose a command:</p>
-        <button id="connectWallet" class="cmd-button">Connect Wallet</button> <!-- Added text to the button -->
-    </div>
-    <script>
-        let isConnected = false; // Track wallet connection state
+<script>
+    let isConnected = false;
 
-        function toggleMenu() {
-            let menu = document.getElementById("navMenu");
-            menu.style.display = (menu.style.display === "block") ? "none" : "block";
-        }
+    function toggleMenu() {
+        const menu = document.getElementById("navMenu");
+        menu.style.display = (menu.style.display === "block") ? "none" : "block";
+    }
 
-        document.getElementById("connectWallet").addEventListener("click", function() {
-            if (!isConnected) {
-                // If not connected, try connecting the wallet
-                if (typeof window.ethereum !== 'undefined') {
-                    // Prompt user to connect to MetaMask
-                    window.ethereum.request({ method: 'eth_requestAccounts' })
-                        .then(accounts => {
-                            isConnected = true;
-                            document.getElementById("cmdText").innerText = "C:\\Users\\Guest> Wallet Connected";
-                            document.getElementById("disconnectWallet").style.display = "block"; // Show the disconnect button
-                            alert("Wallet connected: " + accounts[0]);
-                        })
-                        .catch(error => {
-                            console.error(error);
-                            alert("Failed to connect wallet.");
-                        });
-                } else {
-                    alert("MetaMask is not installed.");
-                }
+    document.getElementById("connectWallet").addEventListener("click", function () {
+        if (!isConnected) {
+            if (typeof window.ethereum !== 'undefined') {
+                window.ethereum.request({ method: 'eth_requestAccounts' })
+                    .then(accounts => {
+                        isConnected = true;
+                        document.getElementById("cmdText").innerText = "C:\\Users\\Guest> Wallet Connected";
+                        document.getElementById("disconnectWallet").style.display = "block";
+                        document.getElementById("connectWallet").disabled = true; // 🔒 disable button
+                        alert("Wallet connected: " + accounts[0]);
+                    })
+                    .catch(error => {
+                        console.error(error);
+                        alert("Failed to connect wallet.");
+                    });
             } else {
-                // If connected, disconnect the wallet
-                isConnected = false;
-                document.getElementById("cmdText").innerText = "C:\\Users\\Guest> Welcome to the CMD UI";
-                document.getElementById("disconnectWallet").style.display = "none"; // Hide the disconnect button
-                alert("Wallet disconnected.");
+                alert("MetaMask is not installed.");
             }
-        });
-    </script>
-</body>
-</html>
+        }
+    });
+
+    document.getElementById("disconnectWallet").addEventListener("click", function () {
+        isConnected = false;
+        document.getElementById("cmdText").innerText = "C:\\Users\\Guest> Welcome to the CMD UI";
+        document.getElementById("disconnectWallet").style.display = "none";
+        document.getElementById("connectWallet").disabled = false; // ✅ re-enable button
+        alert("Wallet disconnected.");
+    });
+</script>
